# RSU-practice-2.1

./: CMakeLists.txt  itask.h  main.cpp  menu.cpp  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.h
include/: task1.h  task10.h  task2.h  task3.h  task4.h  task5.h  task6.h  task7.h  task8.h  task9.h
run/: task1_run.cpp  task2_run.cpp  task3_run.cpp
src/: task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
