cmake_minimum_required(VERSION 3.25)
project(solutions_2_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(solutions_2_1 main.cpp run/task1_run.cpp menu.cpp include/task1.h run/itask.h run/task2_run.cpp include/task2.h include/task3.h run/task3_run.cpp include/task4.h include/task5.h include/task6.h src/task1.cpp src/task2.cpp src/task3.cpp src/task4.cpp src/task6.cpp include/task7.h src/task7.cpp include/task9.h src/task9.cpp include/task10.h src/task10.cpp include/task8.h src/task8.cpp)
